--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Blackjackzinho</title>
 </head>
 <body>
+    <header class="top">
+        <button class="shuffle">
+            <img src="/src/imgs/shuffle.png" alt="embaralhar as cartas">
+        </button>
+        <div class="player-2 cards">
+            <img src="/src/imgs/placeholderCard.png" alt="carta do player 2" class="card">
+            <img src="/src/imgs/placeholderCard.png" alt="carta do player 2" class="card">
+            <img src="/src/imgs/placeholderCard.png" alt="carta do player 2" class="card">
+        </div>
+        <div class="player-2 score">0</div>
+    </header>
     <script src="/src/main.js" type="module"></script>
 </body>
 </html>
